Bug 413907 - Changes to the fill color of the head of a composition are not displayed
Summary: Changes to the fill color of the head of a composition are not displayed
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.29.2 (KDE Applications 19.08.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-07 09:08 UTC by Ralf Habacker
Modified: 2019-11-07 10:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.80 (KDE Applications 19.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-11-07 09:08:12 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add two classes to a diagram
3. Add an aggregation between both classes
4. change line color of aggregation to another color

OBSERVED RESULT
The color of the aggregation head is not changed

EXPECTED RESULT
The color of the aggregation head should have the same color as the line

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.1
KDE Frameworks Version: 5.55
Qt Version: 5.9.7

ADDITIONAL INFORMATION
A workaround is to save and load the xmi file
Comment 1 Ralf Habacker 2019-11-07 10:07:39 UTC
Git commit be35a7c59057bc060174cf1b98d8f0d369ee7c8c by Ralf Habacker.
Committed on 07/11/2019 at 09:46.
Pushed by habacker into branch 'master'.

Fix 'Changes to the fill color of the head of a composition are not displayed'

AssocationLine::brush() needs to be called here, because it gets the line
color directly from AssociationWidget.

FIXED-IN:2.29.80 (KDE Applications 19.11.80)

M  +10   -3    umbrello/umlwidgets/associationline.cpp

https://commits.kde.org/umbrello/be35a7c59057bc060174cf1b98d8f0d369ee7c8c