Fix 'Changes to the fill color of the head of a composition are not displayed'

AssocationLine::brush() needs to be called here, because it gets the line
color directly from AssociationWidget.

FIXED-IN:2.29.80 (KDE Applications 19.11.80)
BUG:413907